# steam-wire

./: .gitignore  .gitkeep  Cargo.toml
.github/workflows/: build-metrics.yml  ci.yml
crates/steam-totp/: Cargo.toml
crates/steam-totp/src/: lib.rs
crates/steam-vent/: Cargo.toml
crates/steam-vent-crypto/: Cargo.toml
crates/steam-vent-proto/: Cargo.toml
crates/steam-vent-proto-build/: Cargo.toml
crates/steam-vent-proto-build/src/: kinds.rs  main.rs
crates/steam-vent-proto-common/: Cargo.toml
crates/steam-vent-proto-common/src/: lib.rs
crates/steam-vent-proto-csgo/: Cargo.toml
crates/steam-vent-proto-csgo/src/: handshake.rs  lib.rs
crates/steam-vent-proto-steam/: Cargo.toml
crates/steam-vent-proto-steam/src/: lib.rs
crates/steam-vent-proto-tf2/: Cargo.toml
crates/steam-vent-proto-tf2/src/: handshake.rs  lib.rs
crates/steam-vent-proto/src/: lib.rs
crates/steam-vent/examples/: access_token.rs  auth_ticket.rs  backpack.rs  chat.rs  inventory.rs  login.rs  product_info.rs  test.rs
crates/steam-vent/src/: message.rs  net.rs  serverlist.rs  service_method.rs  session.rs
crates/steam-vent/src/auth/: confirmation.rs  mod.rs
crates/steam-vent/src/connection/: filter.rs  mod.rs  raw.rs  unauthenticated.rs
crates/steam-vent/src/game_coordinator/: handshake.rs  mod.rs
crates/steam-wire/: Cargo.toml
crates/steam-wire-crypto/: Cargo.toml
crates/steam-wire-proto/: Cargo.toml
crates/steam-wire-proto-build/: Cargo.toml
crates/steam-wire-proto-build/src/: main.rs
crates/steam-wire-proto-common/: Cargo.toml
crates/steam-wire-proto-common/src/: lib.rs
crates/steam-wire-proto-csgo/: Cargo.toml
crates/steam-wire-proto-csgo/src/: handshake.rs  lib.rs
crates/steam-wire-proto-steam/: Cargo.toml
crates/steam-wire-proto-steam/src/: lib.rs
crates/steam-wire-proto-tf2/: Cargo.toml
crates/steam-wire-proto-tf2/src/: handshake.rs  lib.rs
crates/steam-wire-proto/src/: lib.rs
crates/steam-wire/examples/: access_token.rs  auth_ticket.rs  backpack.rs  chat.rs  custom_transport.rs  inventory.rs  product_info.rs  test.rs
crates/steam-wire/src/: jwt.rs  lib.rs  message.rs  net.rs  service_method.rs  session.rs
crates/steam-wire/src/auth/: confirmation.rs  guard_data.rs  mod.rs
crates/steam-wire/src/connection/: filter.rs  mod.rs  raw.rs  unauthenticated.rs
crates/steam-wire/src/game_coordinator/: handshake.rs  mod.rs
crates/steam-wire/src/transport/: tcp.rs
crypto/: Cargo.toml  build.rs
crypto/src/: lib.rs
docs/: RESEARCH.md
examples/: backpack.rs  chat.rs  custom_transport.rs  inventory.rs  product_info.rs
experiments/prost-codegen-probe/: Cargo.toml  build.rs  generated_dump.rs
experiments/prost-codegen-probe/src/: main.rs
experiments/prost-poc/: Cargo.toml  README.md  build.rs  measure.sh
experiments/prost-poc/src/: main.rs
src/: eresult.rs  lib.rs  net.rs  service_method.rs  session.rs
src/auth/: confirmation.rs  guard_data.rs  mod.rs
src/connection/: filter.rs  raw.rs  unauthenticated.rs
src/game_coordinator/: handshake.rs  mod.rs
src/transport/: tcp.rs  websocket.rs
