[package]
name = "steam-vent"
version = "0.5.0"
edition.workspace = true

[dependencies]
steam-vent-proto-common = "0.5.1"
steam-vent-proto-steam = "0.5.2"
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { workspace = true, features = ["net", "io-util", "macros", "io-std"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-webpki-roots",
] }
rustls = { workspace = true }
webpki-roots = "1.0.2"
binrw = "0.15.0"
thiserror = { workspace = true }
bytes = { workspace = true }
protobuf = { workspace = true }
bytemuck = { version = "1.23.2", features = ["derive"] }
crc = "3.3.0"
byteorder = "1.5.0"
flate2 = { workspace = true }
steamid-ng = "3.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
dashmap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
json = { workspace = true }
wreq = { workspace = true }
rsa = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
num_enum = "0.7.4"
directories = "6.0.0"
async-stream = "0.3.6"
rand = { workspace = true }

totp = { workspace = true }

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
vdf-reader = "0.3.1"
steam-vent-proto = "0.5.2"

[[example]]
name = "backpack"
required-features = ["steam-vent-proto/tf2"]

[[example]]
name = "inventory"
required-features = ["steam-vent-proto/csgo"]
