[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/uselessgoddess/steam-wire"
rust-version = "1.85.0"

[workspace.dependencies]
steam-wire = { path = "crates/steam-wire" }
steam-wire-crypto = { path = "crates/steam-wire-crypto" }
steam-wire-proto = { path = "crates/steam-wire-proto" }
steam-wire-proto-common = { path = "crates/steam-wire-proto-common" }
steam-wire-proto-steam = { path = "crates/steam-wire-proto-steam" }
steam-wire-proto-tf2 = { path = "crates/steam-wire-proto-tf2" }
steam-wire-proto-csgo = { path = "crates/steam-wire-proto-csgo" }
steam-wire-proto-build = { path = "crates/steam-wire-proto-build" }

# async/io
tokio = { version = "1.47" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1.17" }
futures-util = { version = "0.3.31" }
async-stream = "0.3.6"

# net/tls
tokio-tungstenite = { version = "0.29.0" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "1.0.2"
wreq = { version = "=6.0.0-rc.29", features = ["json"] }

# serde/prost 
prost = { version = "0.13" }
prost-types = { version = "0.13" }
prost-build = { version = "0.13" }
protox = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0" }
bytes = { version = "1.10" }
binrw = "0.15.0"
bytemuck = { version = "1.23.2", features = ["derive"] }

# crypto
rsa = { version = "=0.10.0-rc.18" }
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
aes = "0.9.1"
cbc = "0.2.1"
rand = { version = "0.10" }

# steam
steamid-ng = "3.0.0"
num_enum = "0.7.4"

# codec
flate2 = { version = "1.1" }
base64 = { version = "0.22" }
hex = { version = "0.4" }
crc = "3.3.0"
byteorder = "1.5.0"

# misc
thiserror = { version = "2.0" }
tracing = { version = "0.1" }
dashmap = { version = "6.1" }
directories = "6.0.0"
once_cell = "1"

# codegen
walkdir = "2.3.3"
clap = { version = "4.5", features = ["derive"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
ahash = "0.8"
# heck 0.5 is what prost-build 0.13 uses internally; we replicate prost's
# `to_upper_camel` + `strip_enum_prefix` ident renaming for the kind tables.
heck = "0.5"

# dev
tracing-subscriber = "0.3.20"
vdf-reader = "0.3.1"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
debug = false
opt-level = 0
