[package]
name = "steam-vent-crypto"
version = "0.2.1"
edition = "2024"

[dependencies]
rand = "0.10.1"
rsa = { workspace = true }
once_cell = "1"
aes = "0.9.1"
cbc = "0.2.1"
sha1 = { workspace = true }
hmac = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
rsa = { workspace = true }
