[package]
name = "steam-totp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Steam Guard TOTP auth codes, confirmation keys and device IDs"
keywords = ["steam", "totp", "steamguard", "2fa"]
categories = ["authentication"]

[dependencies]
base64 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
