[package]
name = "steam-vent-proto-build"
description = "Build steam-vent compatible protobuf bindings"
version = "0.5.0"
edition = "2021"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"
repository = "https://codeberg.org/steam-vent/proto"

[dependencies]
protobuf-codegen = { workspace = true }
protobuf-parse = { workspace = true }
protobuf = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
quote = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
ahash = { workspace = true }