[package]
name = "steam-vent-proto-common"
description = "Trait for protobuf structs used by the Steam client protocol"
version = "0.6.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"
repository = "https://codeberg.org/steam-vent/proto"

[dependencies]
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
