[package]
name = "steam-vent-proto-steam"
description = "Protobuf structs used by the Steam client protocol for Steam"
version = "0.6.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"
repository = "https://codeberg.org/steam-vent/proto"

[dependencies]
steam-vent-proto-common = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }