[package]
name = "steam-vent-proto"
version = "0.6.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Protobuf structs used by the Steam client protocol"
license = "MIT"
repository = "https://codeberg.org/steam-vent/proto"
rust-version = "1.78.0"

[dependencies]
steam-vent-proto-common = { workspace = true }
steam-vent-proto-steam = { workspace = true }
# NOTE: the tf2/csgo/dota2 game-coordinator protos used to be pulled from the
# external `steam-vent-proto-{tf2,csgo,dota2}` crates (rust-protobuf 3.x). They
# were dropped during the prost migration: those registry crates are generated
# against the old rust-protobuf `steam-vent-proto-common` API and cannot link
# against the prost-based common in this workspace. The game-coordinator
# transport (`Connection::game_coordinator`, `GenericGCHandshake`) still lives in
# `steam-vent`; to use it, bring your own prost-generated game protos. See
# docs/RESEARCH.md §8 ("External game-coordinator crates").