[package]
name = "steam-wire-crypto"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic helpers used by the Steam client protocol"

[dependencies]
rand = { workspace = true }
rsa = { workspace = true }
once_cell = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
rsa = { workspace = true }
