[package]
name = "steam-wire-proto-build"
description = "Build steam-wire compatible protobuf bindings"
version = "0.6.0"
edition = "2021"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"
repository = "https://codeberg.org/steam-wire/proto"

[dependencies]
# pure-Rust protobuf parsing + codegen (no protoc / no C toolchain)
prost-build = { workspace = true }
prost-types = { workspace = true }
protox = { workspace = true }
heck = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
quote = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
