# Standalone (detached from the parent workspace) prost proof-of-concept.
# It regenerates a representative subset of the Steam .proto surface with prost
# (parsing via protox — pure Rust, no protoc) so the generated-code size can be
# compared head-to-head against the rust-protobuf output in
# crates/steam-vent-proto-steam/src/generated. See ../README.md.
[workspace]

[package]
name = "prost-poc"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
prost = "0.13"

[build-dependencies]
protox = "0.7"
prost-build = "0.13"
